# -EuroVoltGreen

./: .cfignore  .cloudflare-pages.json  .dev.vars  .gitignore  AI-CHATBOT-SETUP.md  CLOUDFLARE_DEPLOYMENT.md  CONTENT-VERIFICATION.md  DEPLOYMENT.md  QUICK-AI-SETUP.md  README.md  _headers  _redirects  about.html  admin-products.html  app.py  build.sh  contact.html  forms.py  index.html  models.py  openai_service.py  package.json  products.html  pyproject.toml  render.yaml  replit.md  requirements.txt  roadmap.html  roadmap.html.backup  routes.py  translations.py  wrangler.toml
attached_assets/: inverter_specifications_1756802964438.csv
functions/api/: chat.js
public/css/: style.css
public/js/: 360viewer.js
site/: _headers  about.html  contact.html  index.html  products.html  roadmap.html
static/css/: style.css
static/js/: chatbot.js  config.js  data.js  main.js  product-details.js
templates/: about.html  base.html  contact.html  index.html  products.html  roadmap.html
